fix: img overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -77,7 +77,7 @@ rr-rest {
   align-items: center;
   padding: var(--spacing-md);
   scroll-snap-align: center;
-  min-width: 100%;
+  min-width: 50%;
 
   & > nav {
     display: flex;
@@ -93,7 +93,7 @@ rr-set {
   align-items: center;
   padding: var(--spacing-md);
   scroll-snap-align: center;
-  min-width: 100%;
+  min-width: 50%;
 
   & > div {
     display: flex;
